# DebateAI-CLI

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  config.toml
src/debateai-cli/: Cargo.toml
src/debateai-cli/src/: main.rs
src/debateai-core/: Cargo.toml
src/debateai-core/src/: config.rs  debate_format.rs  error.rs  lib.rs  orchestrator.rs  participant.rs  tts.rs
