[workspace]
resolver = "2"
members = ["src/debateai-cli", "src/debateai-core"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["James Clarke <jamesclarke7283@gmail.com>"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
async-openai = { version = "0.32.2", features = ["chat-completion"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
colored = "3"
toml = "0.9"
kokoro-tiny = "0.1"
hound = "3"
reqwest = { version = "0.12.28", features = ["json"] }
