[package]
name = "debateai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "debateai"
path = "src/main.rs"

[dependencies]
debateai-core = { path = "../debateai-core" }
clap.workspace = true
tokio.workspace = true
dotenvy.workspace = true
colored.workspace = true
