[package]
name = "debateai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-openai.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
kokoro-tiny.workspace = true
hound.workspace = true
reqwest.workspace = true
async-trait = "0.1"
regex = "1"
